[build-system]
requires = ["setuptools>=68.2.2"]
build-backend = "setuptools.build_meta"

[project]
name = "celltraj"
version = "0.1.82"
authors = [
  { name="Jeremy Copperman", email="copperma@ohsu.edu" },
]
description = "Toolset for single-cell trajectory modeling."
readme = "README.rst"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "numpy",
  "h5py",
  "matplotlib",
  "scipy",
  "scikit-image",
  "scikit-learn",
  "scipy",
  "pot",
  "csaps"
]

[project.urls]
Homepage = "https://github.com/jcopperm/celltraj"
Issues = "https://github.com/jcopperm/celltraj/issues"

[project.optional-dependencies]
dependencies = [
  "pcdiff",
  "pyntcloud",
  "pandas",
  "fipy",
  "nanomesh",
  "multipoles",
  "pyemma"
]

[tool.setuptools]
# ...
package-dir = {"" = "celltraj"}
    # directory containing all the packages (e.g.  src/mypkg1, src/mypkg2)
